--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -10,6 +10,7 @@
     <main>
         <h1>Zak's Life in a Slide Show</h1>
         <p><input type="button" id="play_pause" value="Pause"></p>
+        <p><input type="button" id="speed" value="Set Speed">
         <p><img src="images/wakeboard.jpg" id="image" alt=""></p>
         <p><span id="caption">He likes to wakeboard</span></p>
     </main>
